--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,7 +48,8 @@ li {
 //Styles
 .wrapper {
   max-width: 100%;
-  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+  background: #FAFAFA;
+  //background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
 //
 .container {
@@ -152,7 +153,6 @@ li {
         height: 80px;
         width: 8px;
       }
-
       svg {
         animation: 25s linear 0s normal none infinite running rotation;
         width: 227px;
@@ -160,6 +160,15 @@ li {
       }
     }
   }
+}
+
+text {
+  font-size: 12px;
+  font-family: Franklin Gothic, sans-serif;
+  font-weight: 200;
+  fill: white;
+  text-transform: uppercase;
+  letter-spacing: 10px;
 }
 
 @keyframes rotation {
@@ -182,15 +191,19 @@ li {
 
 //ABOUT
 //TODO кнопку плэй на видео
-//TODO РАЗОБРАТЬСЯ С КОНТЕЙНЕРАМИ!!!!
 
-.about {
+
+.about-wrapper {
   display: flex;
   max-width: 1400px;
   margin: 0 auto;
   height: 800px;
   padding-left: 60px;
   padding-right: 138px;
+}
+
+.about {
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 
   &-label {
     text-align: center;
@@ -323,20 +336,20 @@ li {
 //}
 
 //ADVANTAGES
-//TODO Добавить контейнер для background
+
 .advantages {
   height: 566px;
   padding-left: 98px;
   padding-right: 98px;
-  background: #FAFAFA url("/src/image/advantages/houseBg.png") no-repeat 100% 100%;
+  background: #FAFAFA url("/src/image/advantages/houseBg.png") no-repeat 94% 100%;
 
   &__title, {
     text-align: center;
     font-size: 32px;
     font-weight: 600;
     color: #1F252D;
-    padding-top: 50px;
-    padding-bottom: 55px;
+    padding-top: 56px;
+    padding-bottom: 48px;
   }
   &__items {
     display: flex;
@@ -380,7 +393,7 @@ li {
     font-weight: 600;
     color: #1F252D;
     padding-top: 50px;
-    padding-bottom: 55px;
+    padding-bottom: 30px;
   }
     &-button {
       display: flex;
@@ -388,7 +401,7 @@ li {
       justify-content: center;
       width: 283px;
       height: 64px;
-      margin: 44px auto 60px;
+      margin: 34px auto 60px;
       background-color: #25252C;
       border-radius: 55px;
       border: 0;
@@ -400,9 +413,9 @@ li {
       }
     }
 }
-.swiper-wrapper {
-  width: 1400px;
-}
+//.swiper-wrapper {
+//  width: 1400px;
+//}
 
 .swiper-button-prev {
   display: flex;
@@ -412,7 +425,7 @@ li {
   height: 42px;
   border-radius: 50%;
   background-color: #25252C;
-  margin-left: 52px;
+  //margin-left: 2px;
   transition: all .3s ease-in-out;
   &:hover {
     background-color: #38384e;
@@ -435,7 +448,7 @@ li {
   height: 42px;
   border-radius: 50%;
   background-color: #25252C;
-  margin-right: 52px;
+  //margin-right: 2px;
   transition: all .3s ease-in-out;
   &:hover {
     background-color: #38384e;
@@ -451,7 +464,7 @@ li {
 }
 .swiper-slide{
   max-width: 380px;
-  height: 481px;
+  height: auto;
   border-radius: 12px;
   background-color: white;
   transition: .3s all ease-in-out;
@@ -486,12 +499,12 @@ li {
       }
     }
   }
-  //TODO Сделать линию before after
+
   &__price {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 25px;
 
     p {
       margin: 0 0 8px;
@@ -510,18 +523,25 @@ li {
         background: #dcd9d9;
       }
     }
+    &-border {
+      position: absolute;
+      width: 100%;
+      left: 0;
+      border-color: rgba(235, 235, 236, 0.25);
+      margin-top: 10px;
+    }
   }
 }
 //BUILDING
 //TODO Не получается накинуть листенер на всю кнопку :(
-//TODO Запихнуть слайдер в контейнер
+
 //TODO кнопку плэй на видео
 .building {
   height: 600px;
   background: #FAFAFA;
 
   &-buttons {
-    padding-top: 45px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -571,7 +591,7 @@ li {
     align-items: center;
     justify-content: center;
     gap: 40px;
-    margin-top: 54px;
+    margin-top: 35px;
     &__description {
       color: #020202;
       width: 455px;
@@ -606,7 +626,7 @@ li {
     font-size: 32px;
     font-weight: 600;
     text-align: center;
-    padding-top: 54px;
+    padding-top: 30px;
     padding-bottom: 44px;
   }
   &-tabs {
@@ -654,7 +674,7 @@ li {
   }
 }
 //QUIZ
-//TODO Поправить контейнер
+
 //TODO Вытащить все дивы из LABEL
 .quiz {
   background-color: #FAFAFA;
@@ -1011,10 +1031,16 @@ li {
 }
 
 //FOOTER
-
-
 .footer {
-  margin-top: 72px;
+  padding-top: 72px;
+  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
+  &-border {
+    //position: static;
+    width: 100%;
+    border-color: rgba(255, 255, 255, 0.05);
+    margin-top: 84px;
+    margin-bottom: 32px;
+  }
 }
 
 .footer-links {
@@ -1036,8 +1062,9 @@ li {
 }
 
 //FOOTER CONTACTS
+
 .footer-bottom__wrapper {
-  padding-top: 118px;
+  //padding-top: 32px;
   background: url(/src/image/socials/ecoground.svg) no-repeat 100% 80%;
 }
 
