fix: progress bar logic

--- a/styles/style.css
+++ b/styles/style.css
@@ -356,6 +356,25 @@ text {
   background-color: #38384e;
 }
 
+.swiper::before, .swiper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 154px;
+  background: #FAFAFA;
+  filter: blur(100px);
+  z-index: 2;
+}
+
+.swiper::before {
+  left: -50px;
+}
+
+.swiper::after {
+  right: -50px;
+}
+
 .swiper-button-prev {
   display: flex;
   align-items: center;
@@ -610,7 +629,7 @@ text {
 }
 
 .quiz-calculator {
-  height: 777px;
+  height: auto;
   background-color: #1F252D;
   border-radius: 12px;
   padding-left: 20px;
@@ -819,6 +838,7 @@ text {
 }
 
 .quiz-calculator__progress {
+  margin-top: 40px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 100px;
   align-items: center;
@@ -828,22 +848,13 @@ text {
   width: 100%;
 }
 .quiz-calculator__progress-value {
-  animation: load 3s normal forwards;
   box-shadow: 0 10px 40px -10px #fff;
   border-radius: 100px;
   background: #fff;
-  height: 1px;
-  width: 0;
+  height: 0.3px;
+  transition: 1s all ease-in;
 }
 
-@keyframes load {
-  0% {
-    width: 0;
-  }
-  100% {
-    width: 14%;
-  }
-}
 .quiz-feedback-form {
   display: none;
   flex-direction: column;
