fix: tab functions

--- a/styles/style.css
+++ b/styles/style.css
@@ -674,6 +674,42 @@ text {
 .quiz-calculator__next-count span {
   font-size: 20px;
 }
+.quiz-calculator__next {
+  height: 88px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #FFFFFF;
+}
+.quiz-calculator__next-button {
+  cursor: pointer;
+  text-align: left;
+  padding-left: 50px;
+  color: #FFFFFF;
+  width: 170px;
+  height: 52px;
+  border-radius: 55px;
+  border: 1px solid white;
+  background: url("/src/image/svg/arrow-right.svg") 69% 55% no-repeat;
+  transition: all 0.3s ease-in-out;
+}
+.quiz-calculator__progress {
+  margin-top: 40px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 100px;
+  align-items: center;
+  position: relative;
+  display: flex;
+  height: 2px;
+  width: 100%;
+}
+.quiz-calculator__progress-value {
+  box-shadow: 0 10px 40px -10px #fff;
+  border-radius: 100px;
+  background: #fff;
+  height: 0.3px;
+  transition: 1s all ease-in;
+}
 
 .quiz-questions {
   color: #FFFFFF;
@@ -837,58 +873,6 @@ text {
 
 .radio:checked + .custom-radio__button::before {
   opacity: 1;
-}
-
-.quiz-calculator__next {
-  height: 88px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #FFFFFF;
-}
-.quiz-calculator__next-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  color: #FFFFFF;
-  width: 170px;
-  height: 52px;
-  border-radius: 55px;
-  border: 1px solid white;
-  background: inherit;
-  transition: all 0.3s ease-in-out;
-}
-.quiz-calculator__next-button:disabled {
-  color: #706e6e;
-  border: 1px solid #706e6e;
-}
-.quiz-calculator__next-button:disabled img {
-  opacity: 0.25;
-}
-.quiz-calculator__next-button img {
-  transition: all 0.3s ease-in-out;
-  opacity: 1;
-  padding-left: 10px;
-  padding-top: 4px;
-}
-
-.quiz-calculator__progress {
-  margin-top: 40px;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 100px;
-  align-items: center;
-  position: relative;
-  display: flex;
-  height: 2px;
-  width: 100%;
-}
-.quiz-calculator__progress-value {
-  box-shadow: 0 10px 40px -10px #fff;
-  border-radius: 100px;
-  background: #fff;
-  height: 0.3px;
-  transition: 1s all ease-in;
 }
 
 .quiz-feedback-form {
