--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,9 +49,8 @@ li {
 .wrapper {
   max-width: 100%;
   background: #FAFAFA;
-  //background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
 }
-//
+
 .container {
   max-width: 1400px;
   padding: 0 40px;
@@ -191,8 +190,6 @@ text {
 
 //ABOUT
 
-
-
 .about-wrapper {
   display: flex;
   max-width: 1400px;
@@ -250,7 +247,6 @@ text {
       &:hover {
         transform: scale(1.2);
         opacity: 1;
-        //transform: translateX(10%);
       }
 
       &.active {
@@ -346,12 +342,6 @@ text {
     }
   }
 }
-//.tab-wrapper {
-//  display: flex;
-//  align-items: center;
-//  justify-content: space-between;
-//  gap: 159px;
-//}
 
 //ADVANTAGES
 
@@ -566,7 +556,6 @@ text {
   }
 }
 //BUILDING
-//TODO Не получается накинуть листенер на всю кнопку :(
 
 .building {
   height: 600px;
@@ -747,14 +736,48 @@ text {
   border-radius: 12px;
   padding-left: 20px;
   padding-right: 20px;
-
   ul {
     padding-inline-start: 0;
   }
-
   &__next-count {
     span {
       font-size: 20px;
+    }
+  }
+  &__next {
+    height: 88px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #FFFFFF;
+    &-button {
+      cursor: pointer;
+      text-align: left;
+      padding-left: 50px;
+      color: #FFFFFF;
+      width: 170px;
+      height: 52px;
+      border-radius: 55px;
+      border: 1px solid white;
+      background: url("/src/image/svg/arrow-right.svg") 69% 55% no-repeat;
+      transition: all .3s ease-in-out;
+    }
+  }
+  &__progress {
+    margin-top: 40px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 100px;
+    align-items: center;
+    position: relative;
+    display: flex;
+    height: 2px;
+    width: 100%;
+    &-value {
+      box-shadow: 0 10px 40px -10px #fff;
+      border-radius: 100px;
+      background: #fff;
+      height: .3px;
+      transition: 1s all ease-in;
     }
   }
 }
@@ -922,60 +945,6 @@ text {
 .radio:checked + .custom-radio__button::before {
   opacity: 1;
 }
-
-.quiz-calculator__next {
-  height: 88px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #FFFFFF;
-  &-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: #FFFFFF;
-    width: 170px;
-    height: 52px;
-    border-radius: 55px;
-    border: 1px solid white;
-    background: inherit;
-    transition: all .3s ease-in-out;
-    &:disabled {
-      color: #706e6e;
-      border: 1px solid #706e6e;
-      img {
-        opacity: 0.25;
-      }
-    }
-
-    img {
-      transition: all .3s ease-in-out;
-      opacity: 1;
-      padding-left: 10px;
-      padding-top: 4px;
-    }
-  }
-}
-
-.quiz-calculator__progress {
-  margin-top: 40px;
-  background: rgba(255,255,255,0.1);
-  border-radius: 100px;
-  align-items: center;
-  position: relative;
-  display: flex;
-  height: 2px;
-  width: 100%;
-  &-value {
-    box-shadow: 0 10px 40px -10px #fff;
-    border-radius: 100px;
-    background: #fff;
-    height: .3px;
-    transition: 1s all ease-in;
-  }
-}
-
 
 .quiz-feedback-form {
   display: none;
