--- a/styles/style.scss
+++ b/styles/style.scss
@@ -203,7 +203,7 @@ text {
   height: 221px;
   z-index: 2;
   margin-left: auto;
-  background: url("/src/image/video/video.png") no-repeat 100% 100%;
+  background: url("../src/image/video/video.png") no-repeat 100% 100%;
   img {
     cursor: pointer;
     position: relative;
@@ -349,7 +349,7 @@ text {
   height: 566px;
   padding-left: 98px;
   padding-right: 98px;
-  background: #FAFAFA url("/src/image/advantages/houseBg.png") no-repeat 94% 100%;
+  background: #FAFAFA url("../src/image/advantages/houseBg.png") no-repeat 94% 100%;
 
   &__title, {
     text-align: center;
@@ -638,7 +638,7 @@ text {
     &__video {
       width: 594px;
       height: 410px;
-      background: url(/src/image/building/video.png) no-repeat 100% 100%;
+      background: url("../src/image/building/video.png") no-repeat 100% 100%;
       img {
         cursor: pointer;
         position: relative;
@@ -759,7 +759,7 @@ text {
       height: 52px;
       border-radius: 55px;
       border: 1px solid white;
-      background: url("/src/image/svg/arrow-right.svg") 69% 55% no-repeat;
+      background: url("../src/image/svg/arrow-right.svg") 69% 55% no-repeat;
       transition: all .3s ease-in-out;
     }
   }
@@ -869,7 +869,7 @@ text {
   height: 24px;
   border: 6px solid #1E262F;
   border-radius: 50%;
-  background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+  background: #1E262F url("../src/image/quiz/check.svg") 0 0 no-repeat;
 }
 .custom-radio__button-styles::before {
   content: '';
@@ -878,7 +878,7 @@ text {
   height: 24px;
   border-radius: 50%;
   border: 6px solid #FFFFFF;
-  background: white url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+  background: white url("../src/image/quiz/checked.svg") 0 0 no-repeat;
   opacity: 0;
   transition: .3s;
 }
@@ -899,7 +899,7 @@ text {
   height: 24px;
   border: 6px solid #1E262F;
   border-radius: 50%;
-  background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+  background: #1E262F url("../src/image/quiz/check.svg") 0 0 no-repeat;
 }
 
 .custom-radio__button-additional::before {
@@ -909,7 +909,7 @@ text {
   height: 24px;
   border-radius: 50%;
   border: 6px solid #FFFFFF;
-  background: white url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+  background: white url("../src/image/quiz/checked.svg") 0 0 no-repeat;
   opacity: 0;
   transition: .3s;
 }
@@ -929,7 +929,7 @@ text {
   height: 24px;
   border: 6px solid #1E262F;
   border-radius: 50%;
-  background: #1E262F url(/src/image/quiz/check.svg) 0 0 no-repeat;
+  background: #1E262F url("../src/image/quiz/check.svg") 0 0 no-repeat;
 }
 .custom-radio__button::before {
   content: '';
@@ -938,7 +938,7 @@ text {
   height: 24px;
   border-radius: 50%;
   border: 6px solid #FFFFFF;
-  background: white url(/src/image/quiz/checked.svg) 0 0 no-repeat;
+  background: white url("../src/image/quiz/checked.svg") 0 0 no-repeat;
   opacity: 0;
   transition: .3s;
 }
@@ -1087,7 +1087,7 @@ text {
 
 .footer-bottom__wrapper {
   //padding-top: 32px;
-  background: url(/src/image/socials/ecoground.svg) no-repeat 100% 80%;
+  background: url("../src/image/socials/ecoground.svg") no-repeat 100% 80%;
 }
 
 .footer-contacts {
